src/scss/modules/_gallery.scss
@import '../_variables';

.gallery {
  width: 100%;
  text-align: left;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  position: relative;

  @media (max-width: $main-max-width) {
    justify-content: space-around;
  }

  @media (max-width: $breakpoint-mobile-width) {
    width: 100vw;
  }

  &--fullscreen {
    // width: 100vw;
    width: var(--viewportWidth);
  }

  &--background {
    background-color: $grey;
  }

  &--center {
    justify-content: center;
  }

  &__item {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;
    margin: 0;
    position: relative;

    &--xl {
      // horizontal item
      @media (max-width: $main-max-width) {
        .gallery__header {
          margin-left: 4px;
        }
      }
    }
    &--l {
      // large vertical item
      width: 50%;

      @media (max-width: $breakpoint-mobile-width) {
        width: 100%;
        .gallery__header {
          margin-left: 4px;
        }
      }
    }

    &--m {
      // two large items
      width: 50%;

      &:first-child .gallery__header {
        margin-left: 4px;
      }
    }

    &--s {
      // two items
      width: 42%;

      @media (max-width: $breakpoint-tablet-width) {
        width: 50%;

        &:first-child .gallery__header {
          margin-left: 4px;
        }
      }
    }

    &--xs {
      // four items
      width: 24%;

      @media (max-width: $breakpoint-tablet-width) {
        width: 50%;

        &:first-child {
          margin-bottom: $gap-mobile;
        }

        &:nth-child(odd) .gallery__header {
          margin-left: 4px;
        }
      }
    }
  }

  &__container {
    width: 100%;
    max-width: $main-max-width;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 auto;
    padding: 100px 0 80px;
  }

  &__wrapper {
    position: relative;
  }

  &__image {
    display: block;
    width: 100%;
    height: auto;
  }

  &__video {
    width: 100%;
    display: block;
  }

  // header

  &__header {
    position: relative;
    width: 90%;
    margin-left: 2px;
  }

  &__info {
    position: absolute;
    left: 0;
    top: 6px;
    font-size: $global-font-size-s;
    font-weight: $global-font-weight;
    letter-spacing: 0;
    text-transform: uppercase;

    @media (max-width: $breakpoint-mobile-width) {
      font-size: $global-font-size-xs;
    }
  }

  &__title {
    font-size: $global-font-size;
    font-weight: $global-font-weight;
    padding: 0;
    margin: 25px 0 0 0;

    @media (max-width: $breakpoint-mobile-width) {
      font-size: $global-font-size-m;
      line-height: 1.2;
    }
  }

  &__cta {
    font-size: $global-font-size-l;
    font-weight: $global-font-weight;
    text-transform: uppercase;
    margin: 3px 0 0 0;
    color: $main-color;

    @media (max-width: $breakpoint-mobile-width) {
      font-size: $global-font-size-ms;
      margin: 0;
    }
  }

  &__link {
    display: block;
    text-decoration: none;
    color: inherit;
  }

  &__paragraph {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 30px;
    margin: -120px 0 120px;

    @media (max-width: $breakpoint-tablet-width) {
      margin: -80px 0 90px;
    }
  }

  &__paragraph-span {
    max-width: 60%;
    font-size: $global-font-size-xl;

    @media (max-width: $breakpoint-tablet-width) {
      max-width: 85%;
    }

    @media (max-width: $breakpoint-mobile-width) {
      font-size: $global-font-size-l;
    }
  }

  &__paragraph-image {
    display: block;
    width: 100%;
    max-width: 350px;
    height: auto;

    @media (max-width: $breakpoint-mobile-width) {
      max-width: 60%;
    }
  }
}

